--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       .video {
         /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
         height: 124px;
-        line-height: 124 px;
+        line-height: 124px;
       }
       .thermometer, .order, .social {
         /* line-height to vertically center */
@@ -34,7 +34,7 @@
         line-height: 40px;
       }
       div.row {
-        border 1px solid;
+        border: 1px solid;
       }
     </style>
   </head>
@@ -44,10 +44,10 @@
         <div class="span2 logo">
           Logo
         </div>
-        <div class="span2 blank">
+        <div class="span6 blank">
           Blank
         </div>
-        <div class="span2 about">
+        <div class="span4 about">
           About
         </div>
       </div>
