Vet Record, first additions of marketing copy, idea etc

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>Vet Record</title>
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -124,17 +124,17 @@
     <div class="container">
       <div class="row-fluid heading">
         <div class="span12">
-          <h1>Product</h1>
+          <h1>Vet Record</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">          
-          <p class="lead">One sentence description.</p>
+          <p class="lead">Log all your consults from while you're on the go, from your phone, tablet or computer.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/ySKdKoU.png">
         </div>
         <div class="span5 actions">
           <div class="span8 offset2">
@@ -146,7 +146,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000<h3> <p>of $10,000</p>
+                  <h3>$0<h3> <p>of $6,000</p>
         	</div>
               </div>
               <div class="span4">
@@ -174,11 +174,12 @@
       
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/ySKdKoU.png">
         </div>
         <div class="span5 copy">
           <p>
-        	  Lorem ipsum ..
+        	With Vet connect you can log your consults, check drug prices and amend bills from anywhere.
+		You won't need to make notes of consult information, you can update the accounts there and then!
           </p>
         </div>
       </div>
@@ -186,11 +187,15 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
           <p>
-        	  Lorem ipsum ..
+        	  Because the information is all stored remotely there is also no installation.
+
+		  Use our migration tool to upload all your current account information to our website.
+
+		  Account statements can be accessed at any time, and the details can be exported in a wide range of formats.
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+          <img class="img-polaroid" src="http://i.imgur.com/ySKdKoU.png">
         </div>
       </div>
         
@@ -202,12 +207,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                    data-parent="#accordion2" href="#collapseOne">
-                  What does FAQ stand for?
+                  Do you have a full list of drugs in your database?
                 </a>
               </div>
               <div id="collapseOne" class="accordion-body-collapse">
                 <div class="accordion-inner">
-                  Frequently Asked Questions.
+                  Yes, all major drugs are included in the database. You can adjust the pricings both individually and in bulk from the pricings page.
                 </div>
               </div>
             </div>
@@ -215,12 +220,12 @@
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse"
                    data-parent="#accordion2" href="#collapseTwo">
-                  What's a frequently asked question?
+                  Can I access the site from my phone?
                 </a>
               </div>
               <div id="collapseTwo" class="accordion-body-collapse">
                 <div class="accordion-inner">
-                  A question which is asked frequently.
+                  Any mobile phone which has a modern javascript enabled web browser can be used to access the site. Iphone, Android and Windows phones in particular are supported.
                </div>
              </div>
            </div>
@@ -233,8 +238,7 @@
          <p>This work is licensed under
            the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC
             By-SA 3.0
-            </a>, without all the cruft that would otherwise be 
-             put at the bottom of thie page.
+            </a>
          </p>
        </div>
      </div>
